--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
+                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-turnos" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
                 <a class="navbar-brand" href="#">Turnos</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -41,6 +47,8 @@
     <!-- Vistas -->
     <div ui-view></div>
     <!-- Librerias -->
+    <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/ngstorage/ngStorage.min.js"></script>
     <script type="text/javascript" src="lib/angular-clipboard/angular-clipboard.js"></script>
